# AdenOS

./: .gitignore  README.md
adenos/: Cargo.toml
adenos/bootloader/: Cargo.toml  README.md  x86_64-bootloader.json
adenos/bootloader/src/: disk_image.rs
adenos/bootloader/src/binary/: gdt.rs  load_kernel.rs  logger.rs  mod.rs
adenos/infinity/: Cargo.toml
adenos/infinity/src/: allocator.rs  error.rs  lib.rs  os.rs
adenos/infinity/src/arch/: mod.rs
adenos/infinity/src/ipc/: lpc.rs  mod.rs
adenos/kernel/: Cargo.toml  link.ld
adenos/kernel/.cargo/: config.toml
adenos/kernel/src/: file.rs  kernel.rs  kernel_console.rs  lib.rs  main.rs  namespace.rs  panic.rs  syscall.rs  volumes.rs
adenos/kernel/src/async_task/: kernel_executor.rs  mod.rs
adenos/kernel/src/collections/: flat_map.rs  mod.rs  tree.rs
adenos/kernel/src/dev/: mod.rs
adenos/kernel/src/dev/char/: mod.rs
adenos/kernel/src/dev/char/framebuffer_console/: mod.rs
adenos/kernel/src/dev/char/kernel_logger/: mod.rs
adenos/kernel/src/dev/char/uart_16550/: mod.rs
adenos/kernel/src/dev/char/vga_textmode/: mod.rs
adenos/kernel/src/dev/filesystem/: mod.rs
adenos/kernel/src/dev/filesystem/fat/: dir.rs  mod.rs
adenos/kernel/src/dev/framebuffer/: mod.rs
adenos/kernel/src/dev/framebuffer/vesa_vbe_framebuffer/: mod.rs
adenos/kernel/src/dev/hal/x86_64/: cpu.rs  mod.rs  pic.rs  port.rs  task.rs
adenos/kernel/src/dev/hal/x86_64/acpi/: mod.rs  tables.rs
adenos/kernel/src/dev/hal/x86_64/apic/: lapic.rs  madt.rs
adenos/kernel/src/dev/hal/x86_64/interrupts/: mod.rs  page_fault.rs  stack_segment_fault.rs
adenos/kernel/src/dev/hal/x86_64/mem/: frame_allocator.rs  page_mapper.rs
adenos/kernel/src/dev/input/: keyboard.rs  mod.rs
adenos/kernel/src/dev/input/ps2_keyboard_pic8259/: mod.rs
adenos/kernel/src/dev/partition/: gpt.rs  mbr.rs  mod.rs
adenos/kernel/src/dev/power/qemu_exit/: mod.rs
adenos/kernel/src/dev/storage/: mod.rs
adenos/kernel/src/dev/storage/ahci/: drive.rs  mod.rs
adenos/kernel/src/dev/storage/nvme/: drive.rs  mod.rs
adenos/kernel/src/exec/: elf.rs  mod.rs  scheduler.rs  thread.rs
adenos/kernel/src/ipc/: lpc.rs  mod.rs
adenos/kernel/tests/: should_panic.rs
adenos/slab_allocator/: Cargo.toml  LICENSE  README.md
adenos/slab_allocator/src/: lib.rs  slab.rs  test.rs
adenos/sysimage/: build.sh  link.ld  test.asm  test.elf
adenos/test_driver/: Cargo.toml
adenos/test_driver/src/: lib.rs
infinity/: Cargo.toml
infinity/.cargo/: config.toml
infinity/src/: handle.rs  lib.rs  os.rs
infinity/src/arch/: mod.rs
infinity/src/arch/x86_64/: mod.rs
infinity/src/dev/: mod.rs
infinity/src/ipc/: mod.rs
kernel/: Cargo.toml  i386-neutrino_os.json  pci  tables
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  devices.rs  file.rs  kernel.rs  kernel_console.rs  lib.rs  main.rs  namespace.rs  panic.rs  syscall.rs  sysinfo.rs  test.rs  volumes.rs
kernel/src/async_task/: mod.rs  test_kernel_thread.rs
kernel/src/collections/: tree.rs
kernel/src/console/: mod.rs
kernel/src/dev/: mod.rs
kernel/src/dev/char/: mod.rs
kernel/src/dev/char/framebuffer_console/: mod.rs
kernel/src/dev/char/uart_16550/: mod.rs
kernel/src/dev/char/vga_textmode/: mod.rs  tests.rs
kernel/src/dev/filesystem/: fat.rs  file.rs  mod.rs
kernel/src/dev/filesystem/fat/: dir.rs  fat.rs  file.rs  mod.rs
kernel/src/dev/filesystem/mbr/: mod.rs
kernel/src/dev/framebuffer/: mod.rs
kernel/src/dev/framebuffer/vesa_vbe_framebuffer/: mod.rs
kernel/src/dev/hal/: mod.rs
kernel/src/dev/hal/x86_64/: cpu.rs  lapic.rs  mod.rs  pic.rs  port.rs  task.rs
kernel/src/dev/hal/x86_64/acpi/: mod.rs  structures.rs  tables.rs
kernel/src/dev/hal/x86_64/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/dev/hal/x86_64/interrupts/: breakpoint.rs  debug.rs  double_fault.rs  general_protection_fault.rs  invalid_tss.rs  mod.rs  segment_not_present.rs  timer.rs
kernel/src/dev/hal/x86_64/mem/: frame_allocator.rs  mod.rs  page_mapper.rs
kernel/src/dev/hal/x86_64/pci/: id.rs  mod.rs
kernel/src/dev/input/ps2_keyboard_pic8259/: mod.rs  scancodes.rs
kernel/src/dev/partition/: gpt.rs  mbr.rs  mod.rs
kernel/src/dev/power/: mod.rs
kernel/src/dev/power/qemu_exit/: mod.rs
kernel/src/dev/storage/: mod.rs
kernel/src/dev/storage/ahci/: drive.rs  mod.rs
kernel/src/dev/storage/nvme/: mod.rs  queue.rs
kernel/src/exec/: elf.rs  mod.rs
kernel/src/handle/: mod.rs
kernel/src/ipc/: mod.rs
kernel/src/syscalls/: mod.rs
kernel/src/task/: kernel_executor.rs  scheduler.rs
kernel/src/userspace/: mod.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs
n/: Cargo.toml
n/src/: main.rs
sdk/linker-scripts/: x86_64-linfinity-adenos-elf64.ld
sdk/rustc-targets/: x86_64-linfinity-adenos.json
sdk/test/: main  main.elf  test.asm
technolibc/: CMakeLists.txt  a.out  test.c
technolibc/include/: arch.h  stdlib.h
technolibc/source/: CMakeLists.txt  stdlib.c
technolibc/source/arch/x86_64/: crt0.asm  crti.asm  crtn.asm
technolibc/src/: arch.h  stdlib.h
technolibc/src/arch/x86_64/crt/: crt0.asm
technolibc/src/arch/x86_64/syscall/: syscall.asm
