[package]
name = "neutrino_os"
version = "0.2.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "unwind"

[dependencies]
bootloader = "0.10.12"
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
executor = "0.8.4"
enum-iterator = "1.1.3"
slab_allocator_rs = "1.0.1"

[dependencies.infinity]
path = "../infinity"

[dependencies.linked_list_allocator]
version = "0.10.1"
optional = true

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.font8x8]
version = "0.3.1"
default-features = false

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0x0000_4000_0000_0000"
