[package]
edition = "2018"
name = "bootloader"
version = "0.11.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Linfinity Technologies"]
build = "build.rs"
description = "AdenOS Bootloader"
license = "MIT/Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
lto = false
debug = true
panic = "abort"
overflow-checks = true

[[bin]]
name = "builder"
required-features = ["builder"]

[[bin]]
name = "bios"
required-features = ["bios_bin"]

[[bin]]
name = "uefi"
required-features = ["uefi_bin"]
[dependencies.anyhow]
version = "1.0.32"
optional = true

[dependencies.argh]
version = "0.1.3"
optional = true

[dependencies.bit_field]
version = "0.10.0"
optional = true

[dependencies.conquer-once]
version = "0.2.1"
optional = true
default-features = false

[dependencies.displaydoc]
version = "0.1.7"
optional = true

[dependencies.fatfs]
version = "0.3.4"
optional = true

[dependencies.gpt]
version = "2.0.0"
optional = true

[dependencies.json]
version = "0.12.4"
optional = true

[dependencies.llvm-tools]
version = "0.1.1"
optional = true

[dependencies.log]
version = "0.4.8"
optional = true

[dependencies.font8x8]
version = "0.3.1"
default-features = false
optional = true

[dependencies.rand]
version = "0.8.4"
optional = true
default-features = false

[dependencies.rand_chacha]
version = "0.3.1"
optional = true
default-features = false

[dependencies.raw-cpuid]
version = "10.2.0"
optional = true

[dependencies.rsdp]
version = "1.0.0"
optional = true

[dependencies.spin]
version = "0.5.2"
optional = true

[dependencies.thiserror]
version = "1.0.20"
optional = true

[dependencies.uefi]
version = "0.11.0"
optional = true

[dependencies.usize_conversions]
version = "0.2.0"
optional = true

[dependencies.x86_64]
version = "0.14.7"
features = ["instructions", "inline_asm"]
optional = true
default-features = false

[dependencies.xmas-elf]
version = "0.8.0"
optional = true
[build-dependencies.llvm-tools-build]
version = "0.1"
optional = true
package = "llvm-tools"

[build-dependencies.proc-macro2]
version = "1.0"
optional = true

[build-dependencies.quote]
version = "1.0"
optional = true

[build-dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[build-dependencies.toml]
version = "0.5.1"
optional = true

[features]
binary = ["llvm-tools-build", "x86_64", "toml", "xmas-elf", "usize_conversions", "log", "conquer-once", "spin", "serde", "font8x8", "quote", "proc-macro2", "raw-cpuid", "rand", "rand_chacha"]
bios_bin = ["binary", "rsdp"]
builder = ["argh", "thiserror", "displaydoc", "anyhow", "llvm-tools", "json", "fatfs", "gpt"]
default = []
uefi_bin = ["binary", "uefi"]
