[package]
name = "infinity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "infinity"

[features]
kernel_mode = []

[dependencies]
num-derive = "0.3.3"
enum-iterator = "1.1.3"
bitflags = "1.2.1"

[dependencies.slab_allocator]
path = "../slab_allocator"

[dependencies.num-traits]
version = "0.2.15"
default-features = false